# gemini-apps

./: README.md  main.py  pyproject.toml
ats/: app.py
basic/: app.py  vision.py
crewai/ai_news/: final_news_article.md  main.py
doc_qna_groq_chat_app/: app.py
multidoc_chat_app/: app.py
multidoc_chat_app/faiss_index/: index.faiss  index.pkl
multilang-invoice-extractor/: app.py
nutrition_lim_app/: app.py
qna-with-history/: app.py  chat_history.json
sql_llm_app/: app.py  sql.py  student.db
yt_transcriber/: app.py
